# scTRP

./: README.md  pyproject.toml  requirements.txt
scTRP/: __init__.py  losses.py
scTRP/inference/: __init__.py  functions.py
scTRP/models/: __init__.py  layers.py
scTRP/training/: __init__.py  simclr.py
scripts/: infer.py  train_simclr.py  train_simclr_extrafeat.py  train_supcon.py  train_xgboost.py
